# omni-meta

./: Cargo.toml
.github/workflows/: ci.yml
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-06-14-omni-meta-skeleton-jpeg-exif.md  2026-06-15-exif-sub-ifd.md  2026-06-15-omni-meta-adapters.md  2026-06-15-omni-meta-bmff-foundation.md  2026-06-15-omni-meta-bmff-heif-meta.md  2026-06-15-omni-meta-bmff-moov.md  2026-06-15-omni-meta-png-webp-gif-xmp.md  2026-06-16-gps-and-video-metadata.md  2026-06-16-omni-meta-ebml.md  2026-06-16-quicktime-container-tags.md  2026-06-17-cargo-fuzz.md  2026-06-17-omni-meta-stripper.md  2026-06-17-png-text-keywords.md  2026-06-17-testing-hardening.md  (+2 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: differential.rs  ebml.rs  exif.rs  isobmff.rs  read_slice_bounded.rs  strip.rs  xmp.rs
fuzz/src/: lib.rs
omni-meta/: Cargo.toml
omni-meta-core/: Cargo.toml
omni-meta-core/src/: civil.rs  cursor.rs  demand.rs  driver.rs  error.rs  lib.rs  limits.rs  model.rs  normalize.rs  probe.rs  sidecar.rs
omni-meta-fixtures/: Cargo.toml
omni-meta-fixtures/samples/: README.md  mkv.mkv  mov.mov  regen.sh  webm.webm
omni-meta-fixtures/src/: golden.rs  lib.rs
omni-meta/src/: lib.rs
omni-meta/src/adapters/: blocking.rs  mod.rs  seek.rs  strip_blocking.rs
omni-meta/tests/: blocking_seek_jpeg.rs  differential.rs  golden.rs  read_slice_jpeg.rs  strip_integration.rs
src/: cursor.rs  demand.rs  driver.rs  lib.rs  limits.rs  model.rs  normalize.rs
src/adapters/: slice.rs
src/codecs/: exif.rs
src/formats/: jpeg.rs
tests/: read_slice_jpeg.rs
(+40 files in other folders)
