[package]
name = "omni-meta"
version = "0.1.0"
edition = "2024"

[lib]
name = "omni_meta"
path = "src/lib.rs"

[features]
default = ["std"]
std = ["omni-meta-core/std"]
__fuzzing = ["omni-meta-core/__fuzzing"]

[dependencies]
omni-meta-core = { path = "../omni-meta-core", default-features = false }

[dev-dependencies]
omni-meta-fixtures = { path = "../omni-meta-fixtures" }
